--- a/index.html
+++ b/index.html
@@ -36,5 +36,75 @@
         </div>
     </div>
 
+    <!----hero section-->
+
+    <div class="hero">
+        <div class="content-sidebar">
+            <div class = "col-1">
+                <img id="hero-img" src="assests/images/information-main.jpg" alt="">
+                <h1>It dosen't hurt to keep praticing</h1>
+                <p>"Tempora nobis vitae ex quasi ullam placeat delectus conseinventore enim, magnam perspiciatis cumque assumenda asperiores dignissimos temporibus."</p>
+                <p>Emanuel, Sr Strategist at Hiring.com</p>
+            </div>
+            <div class="col-2">
+                <img src="assests/images/information-orientation.jpg" alt="">
+                <div class="col-txt">
+                    <h1>Orientation date</h1>
+                    <p>Tue 10/11 &amp; Wed 10/12: 8am - 3pm</p>
+                    <a href="#">Read More</a>
+                </div>
+            </div> 
+        </div>
+    </div>
+
+    <!--Learning  card Section-->
+    <div class="main">
+        <h1>Learn More</h1>
+        <div class="cards">
+            <a href="#" class="card">
+                <div class="card-img" style="background-image: url('assests/images/course-software.jpg');"></div>
+                <div class="card-content">
+                    <div class="card-title">Software Enginnering</div>
+                    <div class="card-des">Webdevelopment,App development,ITO,APIs</div>
+                </div> 
+            </a>
+            <a href="#" class="card">
+                <div class="card-img" style="background-image: url('assests/images/course-computer-art.jpg');"></div>
+                <div class="card-content">
+                    <div class="card-title">Computer Art</div>
+                    <div class="card-des">Imaging &amp; Design,Web Design,Motion Graphics &amp; Visual Effects,Computer Animation</div>
+                </div> 
+            </a>
+            <a href="" class="card">
+                <div class="card-img" style="background-image: url('assests/images/course-design.jpg');"></div>
+                <div class="card-content">
+                    <div class="card-title">Design</div>
+                    <div class="card-des">User Experince Design, User Research,Visual Design</div>
+                </div> 
+                </a>
+                <a href="" class="card">
+                    <div class="card-img" style="background-image: url('assests/images/course-data.jpg');"></div>
+                    <div class="card-content">
+                        <div class="card-title">Data</div>
+                        <div class="card-des">Data Science, Big Data ,SQL, Data Vosialization</div>
+                    </div> 
+                </a>
+                <a href="" class="card">
+                    <div class="card-img" style="background-image: url('assests/images/course-business.jpg');"></div>
+                    <div class="card-content">
+                        <div class="card-title">Business</div>
+                        <div class="card-des">Product Development, Business Development, Startup</div>
+                    </div> 
+                </a>
+                <a href="" class="card">
+                    <div class="card-img" style="background-image: url('assests/images/course-marketing.jpg');"></div>
+                    <div class="card-content">
+                        <div class="card-title">Marketing</div>
+                        <div class="card-des">Analytics,Content Marketing, Mobile Marketing</div>
+                    </div> 
+                </a>
+        </div>
+    </div>  
+    
 </body>
 </html>
